# Equipo3

./: CMakeLists.txt  Consola.cpp  Consola.h  Juego.cpp  Juego.h  Jugador.cpp  Jugador.h  Perfil.cpp  Perfil.h  Plataforma.cpp  Plataforma.h  main.cpp  pc.cpp  pc.h
