cmake_minimum_required(VERSION 3.29.6)
project(Equipo3)

set(CMAKE_CXX_STANDARD 20)

add_executable(Equipo3 main.cpp
        Consola.cpp
        Consola.h
        Juego.cpp
        Juego.h
        Jugador.cpp
        Jugador.h
        Plataforma.cpp
        Plataforma.h
        pc.cpp
        pc.h
        Consola.cpp
        Consola.h
        Perfil.cpp
        Perfil.h
)
